app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buzzer-application
spec:
  selector:
    matchLabels:
      app: buzzer-application
  template:
    metadata:
      labels:
        app: buzzer-application
    spec:
      containers:
        - name: buzzer-application
          image: ferretmaxime/buzzerquiz:1.0.0
       
          ports:
            - containerPort: 5000
