app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buzzer-application
  labels:
    name: buzzer-application
spec:
  rules:
    - host: buzzer.kub.sspcloud.fr
      # Changer le host vers une URL qui fonctionne. Par exemple : buzzer.kub.sspcloud.fr
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: buzzer-application
                port:
                  number: 80
